--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,10 @@
     "axios": "^0.17.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-google-maps": "^9.4.3",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
+    "react-sparklines": "^1.6.0",
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3"
   },
