--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "lodash": "^4.17.4",
-    "nodemon": "^1.14.3"
+    "mongoose": "^5.0.0-rc2",
+    "nodemon": "^1.14.3",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0"
   }
 }
